# backend-task

./: manage.py  pyproject.toml  pytest.ini
core/: models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20210521_2019.py  0003_alter_address_number.py
tests/: conftest.py  test_core.py
water_order/: asgi.py  settings.py  urls.py  wsgi.py
