[tool.poetry]
name = "backend-task"
version = "0.1.0"
description = ""
authors = ["azat715 <azat715@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.3"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
pylint-django = "^2.4.4"
black = "^21.5b1"
pylint = "^2.8.2"
pytest = "^6.2.4"
pytest-django = "^4.3.0"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
